--- a/about.html
+++ b/about.html
@@ -50,8 +50,9 @@
 
         h3 {
             font-family: "Noto Sans TC";
-            font-size: 20px;
-            line-height: 40px
+            font-size: 18px;
+            line-height: 45px;
+            color: #4f4f4f
         }
 
         h4 {
@@ -100,10 +101,10 @@
                 <br><br><br><br><br><br><br><br>
                 <ul>
                     <li><a href="index.html"><span class="here">Homepage</span></a></li>
-                    <li><a href="economic.html"><span class="here">Economic</span></a></li>
-                    <li><a href="#culture"><span class="here">Culture</span></a></li>
-                    <li><a href="#welfare"><span class="here">Welfare</span></a></li>
-                    <li><a href="#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.html#changhua"><span class="here">Changhua</span></a></li>
+                    <li><a href="index.html#situation"><span class="here">Situation</span></a></li>
+                    <li><a href="index.html#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.html#solution"><span class="here">Solution</span></a></li>
                 </ul>
             </nav>
         </div>
@@ -133,6 +134,8 @@
                             <h3>面臨人口老化加速，失能及失智者的照顧需求大量增加，家庭照顧負擔變為十分沈重。根據內政部的人口調查，目前彰化縣的老年人口比例高達14.78%，已經屬於「高齡社會」；再加上彰化主要經濟產業為農業，造成青少年人口就業外移的現象，導致老年人口雖多，卻無法得到足夠的人力及資源來照顧老人，如此可見彰化縣對於長照是有一定的需求。
                             </h3>
                         </div>
+                        <br><br>
+                        <p><a href="index.html#changhua" class="button">Back to Homepage</a></p>
                     </section>
                 </div>
 
@@ -152,14 +155,6 @@
 
 
     <!-- Footer -->
-
-    <p><a href="#" class="button">Back to Top</a></p>
-
-
-
-
-
-    <!-- Footer -->
     <div id="footer">
         <div class="container">
             <div class="row">
@@ -170,6 +165,9 @@
                             <li><a href="https://www.chcg.gov.tw/ch/00home/home.asp">Changhua County Government Website</a></li>
                             <li><a href="http://social.chcg.gov.tw/00home/index1.asp">Department Of Social Affairs Website</a></li>
                             <li><a href="https://www.mohw.gov.tw/mp-1.html">Ministry of Health and Welfare</a></li>
+                            <li><a href="http://ltcgis.mohw.gov.tw/Index/resource.aspx">Long-Term Care Map</a></li>
+                            <li><a href="https://1966.gov.tw/LTC/mp-201.html">Long-term Care Website (Government)</a></li>
+                            <li><a href="https://statdb.mol.gov.tw/statis/jspProxy.aspx?sys=210&kind=21&type=1&funid=c13090&parm1=code1=1107%20codnm1=xxe5xxbdxxb0xxe5xx8cxx96xxe7xxb8xxa3%20code2=57&rdm=enNrnjV3">Department of Labor</a></li>
                         </ul>
                     </section>
                 </div>
