--- a/foreignworker.html
+++ b/foreignworker.html
@@ -50,9 +50,11 @@
 
         h3 {
             font-family: "Noto Sans TC";
-            font-size: 20px;
-            line-height: 40px
+            font-size: 18px;
+            line-height: 45px;
+            color: #4f4f4f
         }
+
 
         h4 {
             color: #fff0f5;
@@ -100,10 +102,10 @@
                 <br><br><br><br><br><br><br><br>
                 <ul>
                     <li><a href="index.html"><span class="here">Homepage</span></a></li>
-                    <li><a href="economic.html"><span class="here">Economic</span></a></li>
-                    <li><a href="#culture"><span class="here">Culture</span></a></li>
-                    <li><a href="#welfare"><span class="here">Welfare</span></a></li>
-                    <li><a href="#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.html#changhua"><span class="here">Changhua</span></a></li>
+                    <li><a href="index.html#situation"><span class="here">Situation</span></a></li>
+                    <li><a href="index.html#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.html#solution"><span class="here">Solution</span></a></li>
                 </ul>
             </nav>
         </div>
@@ -150,8 +152,8 @@
                 <div id="content" class="8u skel-cell-important">
                     <section>
 
-                        <div class="row" style="background-color: aquamarine;">
-                            <h3>由圖(一)可以看到彰化縣是除了六都以外，聘僱外籍看護最多的縣市，且也可以由圖(二)發現到其聘雇人數是逐年上升的，明顯了解外籍移工是彰化縣看護人力的重要來源。</h3>
+                        <div class="row" style="background-color: #f0f0f0;">
+                            <h3 style="padding-left: 10px;">由圖(一)可以看到彰化縣是除了六都以外，聘僱外籍看護最多的縣市，且也可以由圖(二)發現到其聘雇人數是逐年上升的，明顯了解外籍移工是彰化縣看護人力的重要來源。</h3>
                         </div>
                         <br><br><br>
                         <p class="posted" style="font-size: 26px;font-weight: 700;">外籍看護法規</p>
@@ -175,7 +177,7 @@
                         </div>
                         <p><br></p>
                         <br><br>
-                        <p><a href="#" class="button">Back to Top</a></p>
+                        <p><a href="index.html#problem" class="button">Back to Homepage</a></p>
                     </section>
 
                 </div>
@@ -202,6 +204,9 @@
                             <li><a href="https://www.chcg.gov.tw/ch/00home/home.asp">Changhua County Government Website</a></li>
                             <li><a href="http://social.chcg.gov.tw/00home/index1.asp">Department Of Social Affairs Website</a></li>
                             <li><a href="https://www.mohw.gov.tw/mp-1.html">Ministry of Health and Welfare</a></li>
+                            <li><a href="http://ltcgis.mohw.gov.tw/Index/resource.aspx">Long-Term Care Map</a></li>
+                            <li><a href="https://1966.gov.tw/LTC/mp-201.html">Long-term Care Website (Government)</a></li>
+                            <li><a href="https://statdb.mol.gov.tw/statis/jspProxy.aspx?sys=210&kind=21&type=1&funid=c13090&parm1=code1=1107%20codnm1=xxe5xxbdxxb0xxe5xx8cxx96xxe7xxb8xxa3%20code2=57&rdm=enNrnjV3">Department of Labor</a></li>
                         </ul>
                     </section>
                 </div>
