--- a/now.html
+++ b/now.html
@@ -50,9 +50,11 @@
 
         h3 {
             font-family: "Noto Sans TC";
-            font-size: 20px;
-            line-height: 40px
+            font-size: 18px;
+            line-height: 45px;
+            color: #4f4f4f
         }
+
 
         h4 {
             color: #fff0f5;
@@ -100,10 +102,10 @@
                 <br><br><br><br><br><br><br><br>
                 <ul>
                     <li><a href="index.html"><span class="here">Homepage</span></a></li>
-                    <li><a href="economic.html"><span class="here">Economic</span></a></li>
-                    <li><a href="#culture"><span class="here">Culture</span></a></li>
-                    <li><a href="#welfare"><span class="here">Welfare</span></a></li>
-                    <li><a href="#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.html#changhua"><span class="here">Changhua</span></a></li>
+                    <li><a href="index.html#situation"><span class="here">Situation</span></a></li>
+                    <li><a href="index.html#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.html#solution"><span class="here">Solution</span></a></li>
                 </ul>
             </nav>
         </div>
@@ -130,12 +132,14 @@
                         </header>
                         <a class="image full"><img src="images/picture.jpg" width=35% height=40% alt="" /></a>
                         <div class="row">
-                            <h3>長照由原本的長照1.0進階為長照2.0，以「找得到、看得到、用得到」為目標，擴大服務對象、增加服務項目並在服務單位掛上掛牌，希望可以讓更多人受惠、減少民眾負擔。
+                            <h3 style="background-color: #f0f0f0;">長照由原本的長照1.0進階為長照2.0，以「找得到、看得到、用得到」為目標，擴大服務對象、增加服務項目並在服務單位掛上掛牌，希望可以讓更多人受惠、減少民眾負擔。
                             </h3>
-                            <br><br><br><br>
+                        </div>
+                        <br><br>
+                        <div class="row">
                             <h3>從2007年開辦的長照1.0已於2016年底進行新的計畫—長照2.0，不只延續了長照1.0的以在地老化為原則，也希望發展與普及長照資源。</h3>
                         </div>
-                        <br><br><br>
+                        <br><br>
                         <p class="posted" style="font-size: 26px;font-weight: 700;">擴大服務對象</p>
                         <div class="row">
                             <h3>原先長照1.0的主要服務對象為65歲以上老人、55歲以上山地原住民、50歲以上身心障礙者及65歲以上IADL獨居者以上四種，長照2.0則擴增了50歲以上失智症患者、55歲以上平地原住民、49歲以下身心障礙者及65歲以上衰弱者，這樣的擴增可使服務對象增加73.8萬人，約成長44%。
@@ -165,7 +169,7 @@
                         <p class="posted" style="font-size: 26px;font-weight: 700;">長照2.0整合分立服務—長照ABC三級將所有服務銜接起來</p>
                         <a class="image full"><img src="images/picture1.jpg" width=35% height=40% alt="" /></a>
                         <div class="row">
-                            <h3>透過「社區整體照顧模式」，將分散的資源整合成一個「大聯盟」，並且分為A、B、C三級。 每個行政區如果都有一個整合成功的「大聯盟」，就能方便社區需要的人士就近享受「大聯盟」裡串聯起來的各項服務。</h3>
+                            <h3 style="background-color: #f0f0f0;">透過「社區整體照顧模式」，將分散的資源整合成一個「大聯盟」，並且分為A、B、C三級。 每個行政區如果都有一個整合成功的「大聯盟」，就能方便社區需要的人士就近享受「大聯盟」裡串聯起來的各項服務。</h3>
                             <p><br></p>
                             <h3>在長照2.0的新增中，最重要的為「三級社區整合服務」。所謂的三級即是A級「長照旗艦店」、B級「長照專賣店」及C級「長照柑仔店」，長照旗艦店一定會有「居家服務」及「照顧服務」這兩項服務項目，「居家服務」可以將服務送至長者家裡，而「日間照顧」則是把長者從家裡接到社區，因此同時擁有這兩個服務項目，才能更深入掌握長者的需求。其次的長照專賣店則是提供原本就有的「居家照顧」、「社區照顧」、「機構照顧」其中一項服務的單位。長照柑仔店則是提供「共餐」、「健康促進」、「延緩失能」等服務。</h3>
                             <a class="image full"><img src="images/three.jpg" width=150px height=300px alt="" /></a>
@@ -178,7 +182,7 @@
                         </div>
                         <p></p>
                         <br><br>
-                        <p><a href="#" class="button">Back to Top</a></p>
+                        <p><a href="index.html#situation" class="button">Back to Homepage</a></p>
                     </section>
 
                 </div>
@@ -209,6 +213,9 @@
                             <li><a href="https://www.chcg.gov.tw/ch/00home/home.asp">Changhua County Government Website</a></li>
                             <li><a href="http://social.chcg.gov.tw/00home/index1.asp">Department Of Social Affairs Website</a></li>
                             <li><a href="https://www.mohw.gov.tw/mp-1.html">Ministry of Health and Welfare</a></li>
+                            <li><a href="http://ltcgis.mohw.gov.tw/Index/resource.aspx">Long-Term Care Map</a></li>
+                            <li><a href="https://1966.gov.tw/LTC/mp-201.html">Long-term Care Website (Government)</a></li>
+                            <li><a href="https://statdb.mol.gov.tw/statis/jspProxy.aspx?sys=210&kind=21&type=1&funid=c13090&parm1=code1=1107%20codnm1=xxe5xxbdxxb0xxe5xx8cxx96xxe7xxb8xxa3%20code2=57&rdm=enNrnjV3">Department of Labor</a></li>
                         </ul>
                     </section>
                 </div>
