--- a/solvehumanresource.html
+++ b/solvehumanresource.html
@@ -50,9 +50,11 @@
 
         h3 {
             font-family: "Noto Sans TC";
-            font-size: 20px;
-            line-height: 40px
+            font-size: 18px;
+            line-height: 45px;
+            color: #4f4f4f
         }
+
 
         h4 {
             color: #fff0f5;
@@ -100,10 +102,10 @@
                 <br><br><br><br><br><br><br><br>
                 <ul>
                     <li><a href="index.html"><span class="here">Homepage</span></a></li>
-                    <li><a href="economic.html"><span class="here">Economic</span></a></li>
-                    <li><a href="#culture"><span class="here">Culture</span></a></li>
-                    <li><a href="#welfare"><span class="here">Welfare</span></a></li>
-                    <li><a href="#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.html#changhua"><span class="here">Changhua</span></a></li>
+                    <li><a href="index.html#situation"><span class="here">Situation</span></a></li>
+                    <li><a href="index.html#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.html#solution"><span class="here">Solution</span></a></li>
                 </ul>
             </nav>
         </div>
@@ -143,7 +145,7 @@
                             <h3>除了提高長照員培訓經費，給予他們專業的訓練之外，同時也須將長照經費核銷流程簡化。過去長照服務提供單位幾乎等半年以上才拿得到錢，未來將建立「預付制度」，減輕各單位的財務負擔。</h3>
                         </div>
                         <p><br></p>
-                        <p><a href="index.html" class="button">Back To Homepage</a></p>
+                        <p><a href="index.html#solution" class="button">Back To Homepage</a></p>
                     </section>
 
                 </div>
@@ -174,6 +176,9 @@
                             <li><a href="https://www.chcg.gov.tw/ch/00home/home.asp">Changhua County Government Website</a></li>
                             <li><a href="http://social.chcg.gov.tw/00home/index1.asp">Department Of Social Affairs Website</a></li>
                             <li><a href="https://www.mohw.gov.tw/mp-1.html">Ministry of Health and Welfare</a></li>
+                            <li><a href="http://ltcgis.mohw.gov.tw/Index/resource.aspx">Long-Term Care Map</a></li>
+                            <li><a href="https://1966.gov.tw/LTC/mp-201.html">Long-term Care Website (Government)</a></li>
+                            <li><a href="https://statdb.mol.gov.tw/statis/jspProxy.aspx?sys=210&kind=21&type=1&funid=c13090&parm1=code1=1107%20codnm1=xxe5xxbdxxb0xxe5xx8cxx96xxe7xxb8xxa3%20code2=57&rdm=enNrnjV3">Department of Labor</a></li>
                         </ul>
                     </section>
                 </div>
