--- a/solveorganization.html
+++ b/solveorganization.html
@@ -50,9 +50,11 @@
 
         h3 {
             font-family: "Noto Sans TC";
-            font-size: 20px;
-            line-height: 40px
+            font-size: 18px;
+            line-height: 45px;
+            color: #4f4f4f
         }
+
 
         h4 {
             color: #fff0f5;
@@ -100,10 +102,10 @@
                 <br><br><br><br><br><br><br><br>
                 <ul>
                     <li><a href="index.html"><span class="here">Homepage</span></a></li>
-                    <li><a href="economic.html"><span class="here">Economic</span></a></li>
-                    <li><a href="#culture"><span class="here">Culture</span></a></li>
-                    <li><a href="#welfare"><span class="here">Welfare</span></a></li>
-                    <li><a href="#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.html#changhua"><span class="here">Changhua</span></a></li>
+                    <li><a href="index.html#situation"><span class="here">Situation</span></a></li>
+                    <li><a href="index.html#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.html#solution"><span class="here">Solution</span></a></li>
                 </ul>
             </nav>
         </div>
@@ -129,7 +131,7 @@
                             <p class="posted" style="font-size: 26px;font-weight: 700;text-align:center;">長照機構增設！政府可以給什麼幫助？</p>
                         </header>
                         <a class="image full"><img src="images/picture9.jpg"  alt="" /></a>
-                        <div class="row">
+                        <div class="row" style="background-color: #f0f0f0;">
                             <h3>根據長照2.0的計畫，政府希望可以給予每個鄉鎮充足的長照ABC機構，但由上圖可見，彰化縣除了5個鄉鎮以外，其餘鄉鎮皆缺乏長照機構。上圖顏色越深的區塊為老年人口比例越高的鄉鎮，可見有地區是迫切需要長照機構卻缺乏的。</h3>
                         </div>
                         <br><br><br>
@@ -145,7 +147,7 @@
 
                         <p><br></p>
 
-                        <p><a href="index.html" class="button">Back To Homepage</a></p>
+                        <p><a href="index.html#solution" class="button">Back To Homepage</a></p>
                     </section>
 
                 </div>
@@ -176,6 +178,9 @@
                             <li><a href="https://www.chcg.gov.tw/ch/00home/home.asp">Changhua County Government Website</a></li>
                             <li><a href="http://social.chcg.gov.tw/00home/index1.asp">Department Of Social Affairs Website</a></li>
                             <li><a href="https://www.mohw.gov.tw/mp-1.html">Ministry of Health and Welfare</a></li>
+                            <li><a href="http://ltcgis.mohw.gov.tw/Index/resource.aspx">Long-Term Care Map</a></li>
+                            <li><a href="https://1966.gov.tw/LTC/mp-201.html">Long-term Care Website (Government)</a></li>
+                            <li><a href="https://statdb.mol.gov.tw/statis/jspProxy.aspx?sys=210&kind=21&type=1&funid=c13090&parm1=code1=1107%20codnm1=xxe5xxbdxxb0xxe5xx8cxx96xxe7xxb8xxa3%20code2=57&rdm=enNrnjV3">Department of Labor</a></li>
                         </ul>
                     </section>
                 </div>
