--- a/solveworker.html
+++ b/solveworker.html
@@ -50,9 +50,11 @@
 
         h3 {
             font-family: "Noto Sans TC";
-            font-size: 20px;
-            line-height: 40px
+            font-size: 18px;
+            line-height: 45px;
+            color: #4f4f4f
         }
+
 
         h4 {
             color: #fff0f5;
@@ -100,10 +102,10 @@
                 <br><br><br><br><br><br><br><br>
                 <ul>
                     <li><a href="index.html"><span class="here">Homepage</span></a></li>
-                    <li><a href="economic.html"><span class="here">Economic</span></a></li>
-                    <li><a href="#culture"><span class="here">Culture</span></a></li>
-                    <li><a href="#welfare"><span class="here">Welfare</span></a></li>
-                    <li><a href="#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.html#changhua"><span class="here">Changhua</span></a></li>
+                    <li><a href="index.html#situation"><span class="here">Situation</span></a></li>
+                    <li><a href="index.html#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.html#solution"><span class="here">Solution</span></a></li>
                 </ul>
             </nav>
         </div>
@@ -128,8 +130,8 @@
                         <header>
                             <p class="posted" style="font-size: 26px;font-weight: 700;text-align:center;">外籍看護問題，到底該如何解決？</p>
                         </header>
-                        <a class="image full"><img src="images/picture2.jpg"  alt="" /></a>
-                        <div class="row">
+                        <a class="image full"><img src="images/picture7.jpg"  alt="" /></a>
+                        <div class="row" style="background-color: #f0f0f0;">
                             <h3>為了預防彰化面臨照護人員短缺的問題，首先要想辦法留住外籍看護，因為其為彰化的主要看謢人員來源，接著彰化要在本身地區，培育專屬於地方的長照人員，並且根據每個鄉鎮市的需求，給予不一樣的長照訓練，有著專業化的長照人員。</h3>
                         </div>
                         <br><br><br>
@@ -149,7 +151,7 @@
                         </div>
                         <p><br></p>
                         <br><br>
-                        <p><a href="#" class="button">Back To Top</a></p>
+                        <p><a href="index.html#solution" class="button">Back To Homepage</a></p>
                     </section>
 
                 </div>
@@ -180,6 +182,9 @@
                             <li><a href="https://www.chcg.gov.tw/ch/00home/home.asp">Changhua County Government Website</a></li>
                             <li><a href="http://social.chcg.gov.tw/00home/index1.asp">Department Of Social Affairs Website</a></li>
                             <li><a href="https://www.mohw.gov.tw/mp-1.html">Ministry of Health and Welfare</a></li>
+                            <li><a href="http://ltcgis.mohw.gov.tw/Index/resource.aspx">Long-Term Care Map</a></li>
+                            <li><a href="https://1966.gov.tw/LTC/mp-201.html">Long-term Care Website (Government)</a></li>
+                            <li><a href="https://statdb.mol.gov.tw/statis/jspProxy.aspx?sys=210&kind=21&type=1&funid=c13090&parm1=code1=1107%20codnm1=xxe5xxbdxxb0xxe5xx8cxx96xxe7xxb8xxa3%20code2=57&rdm=enNrnjV3">Department of Labor</a></li>
                         </ul>
                     </section>
                 </div>
@@ -189,21 +194,21 @@
                         <table CELLPADDING=50 border=10>
                             <tr align="center">
                                 <td width=150>
-                                    <a href="#" class="image"><img src="images/臻.png" ></a>
+                                    <a class="image"><img src="images/臻.png" ></a>
                                     <h1 style="color:#FFF">劉宜臻</h1>
                                 </td>
                                 <td width=150>
-                                    <a href="#" class="image"><img src="images/cha.PNG" ></a>
+                                    <a class="image"><img src="images/cha.PNG" ></a>
                                     <h1 style="color:#FFF">劉家樺</h1>
                                 </td>
                             </tr>
                             <tr align="center">
                                 <td width=100>
-                                    <a href="#" class="image"><img src="images/翊.png" ></a>
+                                    <a class="image"><img src="images/翊.png" ></a>
                                     <h1 style="color:#FFF">李翊嘉</h1>
                                 </td>
                                 <td width=100>
-                                    <a href="#" class="image"><img src="images/康.png" ></a>
+                                    <a class="image"><img src="images/康.png" ></a>
                                     <h1 style="color:#FFF">康益豪</h1>
                                 </td>
                             </tr>
@@ -222,7 +227,7 @@
                         </li>
                         <li>
                             <h3>Mail</h3>
-                            <p href="#">candy860527@gmail.com</p>
+                            <p>candy860527@gmail.com</p>
                         </li>
                         <li>
                             <h3>Phone</h3>
@@ -238,7 +243,7 @@
     <!-- Copyright -->
     <div id="copyright">
         <div class="container">
-            Design: <a href="#">女孩當自強</a>
+            Design: <a>女孩當自強</a>
         </div>
 
     </div>
