--- a/organization.html
+++ b/organization.html
@@ -50,9 +50,11 @@
 
         h3 {
             font-family: "Noto Sans TC";
-            font-size: 20px;
-            line-height: 40px
+            font-size: 18px;
+            line-height: 45px;
+            color: #4f4f4f
         }
+
 
         h4 {
             color: #fff0f5;
@@ -100,10 +102,10 @@
                 <br><br><br><br><br><br><br><br>
                 <ul>
                     <li><a href="index.html"><span class="here">Homepage</span></a></li>
-                    <li><a href="economic.html"><span class="here">Economic</span></a></li>
-                    <li><a href="#culture"><span class="here">Culture</span></a></li>
-                    <li><a href="#welfare"><span class="here">Welfare</span></a></li>
-                    <li><a href="#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.html#changhua"><span class="here">Changhua</span></a></li>
+                    <li><a href="index.html#situation"><span class="here">Situation</span></a></li>
+                    <li><a href="index.html#problem"><span class="here">Problem</span></a></li>
+                    <li><a href="index.html#solution"><span class="here">Solution</span></a></li>
                 </ul>
             </nav>
         </div>
@@ -149,7 +151,7 @@
                         <h3>最後，護病比及專業度不足的問題也十分嚴重。護理之家所提供的照顧服務一直處於供不應求的狀態，每位護理人員所需照顧之人數也超過一般護理人員所能負荷之人數，而由於人力不足，護理機構也可能聘請外籍看護幫忙進行照顧工作，但可能面臨到外及看護的訓練不足，以至於在照護方面無法提供最專業的照顧。當醫療人員不足使護病比過高及照護人員專業度不足的情況下，年長者時常無法得到最好且最全面的照顧。</h3>
 
                         <br><br>
-                        <p><a href="index.html" class="button">Back to Homepage</a></p>
+                        <p><a href="index.html#problem" class="button">Back to Homepage</a></p>
                     </section>
 
                 </div>
@@ -180,6 +182,9 @@
                             <li><a href="https://www.chcg.gov.tw/ch/00home/home.asp">Changhua County Government Website</a></li>
                             <li><a href="http://social.chcg.gov.tw/00home/index1.asp">Department Of Social Affairs Website</a></li>
                             <li><a href="https://www.mohw.gov.tw/mp-1.html">Ministry of Health and Welfare</a></li>
+                            <li><a href="http://ltcgis.mohw.gov.tw/Index/resource.aspx">Long-Term Care Map</a></li>
+                            <li><a href="https://1966.gov.tw/LTC/mp-201.html">Long-term Care Website (Government)</a></li>
+                            <li><a href="https://statdb.mol.gov.tw/statis/jspProxy.aspx?sys=210&kind=21&type=1&funid=c13090&parm1=code1=1107%20codnm1=xxe5xxbdxxb0xxe5xx8cxx96xxe7xxb8xxa3%20code2=57&rdm=enNrnjV3">Department of Labor</a></li>
                         </ul>
                     </section>
                 </div>
