--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
                         <header>
                             <p class="posted" style="font-size: 26px;font-weight: 700;text-align: center;">彰化縣成為高齡社會該如何面對?</p>
                         </header>
-                        <a href="#" class="image full"><img src="images/chart2.png" width=35% height=55% alt="" /></a>
+                        <a class="image full"><img src="images/chart2.png" width=35% height=55% alt="" /></a>
                         <div class="row">
                             <h3>面臨人口老化加速，失能及失智者的照顧需求大量增加，家庭照顧負擔變為十分沈重。根據內政部的人口調查，目前彰化縣的老年人口比例高達14.78%，已經屬於「高齡社會」；再加上彰化主要經濟產業為農業，造成青少年人口就業外移的現象，導致老年人口雖多，卻無法得到足夠的人力及資源來照顧老人，如此可見彰化縣對於長照是有一定的需求。
                             </h3>
@@ -177,21 +177,21 @@
                         <table CELLPADDING=50 border=10>
                             <tr align="center">
                                 <td width=150>
-                                    <a href="#" class="image"><img src="images/臻.png" ></a>
+                                    <a class="image"><img src="images/臻.png" ></a>
                                     <h1 style="color:#FFF">劉宜臻</h1>
                                 </td>
                                 <td width=150>
-                                    <a href="#" class="image"><img src="images/cha.PNG" ></a>
+                                    <a class="image"><img src="images/cha.PNG" ></a>
                                     <h1 style="color:#FFF">劉家樺</h1>
                                 </td>
                             </tr>
                             <tr align="center">
                                 <td width=100>
-                                    <a href="#" class="image"><img src="images/翊.png" ></a>
+                                    <a class="image"><img src="images/翊.png" ></a>
                                     <h1 style="color:#FFF">李翊嘉</h1>
                                 </td>
                                 <td width=100>
-                                    <a href="#" class="image"><img src="images/康.png" ></a>
+                                    <a class="image"><img src="images/康.png" ></a>
                                     <h1 style="color:#FFF">康益豪</h1>
                                 </td>
                             </tr>
@@ -210,7 +210,7 @@
                         </li>
                         <li>
                             <h3>Mail</h3>
-                            <p href="#">candy860527@gmail.com</p>
+                            <p>candy860527@gmail.com</p>
                         </li>
                         <li>
                             <h3>Phone</h3>
@@ -226,7 +226,7 @@
     <!-- Copyright -->
     <div id="copyright">
         <div class="container">
-            Design: <a href="#">女孩當自強</a>
+            Design: <a>女孩當自強</a>
         </div>
 
     </div>
