--- a/index.html
+++ b/index.html
@@ -269,21 +269,21 @@
                         <table CELLPADDING=50 border=10>
                             <tr align="center">
                                 <td width=150>
-                                    <a href="#" class="image"><img src="images/臻.png" ></a>
+                                    <a class="image"><img src="images/臻.png" ></a>
                                     <h1 style="color:#FFF">劉宜臻</h1>
                                 </td>
                                 <td width=150>
-                                    <a href="#" class="image"><img src="images/cha.PNG" ></a>
+                                    <a class="image"><img src="images/cha.PNG" ></a>
                                     <h1 style="color:#FFF">劉家樺</h1>
                                 </td>
                             </tr>
                             <tr align="center">
                                 <td width=100>
-                                    <a href="#" class="image"><img src="images/翊.png" ></a>
+                                    <a class="image"><img src="images/翊.png" ></a>
                                     <h1 style="color:#FFF">李翊嘉</h1>
                                 </td>
                                 <td width=100>
-                                    <a href="#" class="image"><img src="images/康.png" ></a>
+                                    <a class="image"><img src="images/康.png" ></a>
                                     <h1 style="color:#FFF">康益豪</h1>
                                 </td>
                             </tr>
@@ -302,7 +302,7 @@
                         </li>
                         <li>
                             <h3>Mail</h3>
-                            <p href="#">candy860527@gmail.com</p>
+                            <p>candy860527@gmail.com</p>
                         </li>
                         <li>
                             <h3>Phone</h3>
@@ -318,7 +318,7 @@
     <!-- Copyright -->
     <div id="copyright">
         <div class="container">
-            Design: <a href="#">女孩當自強</a>
+            Design: <a>女孩當自強</a>
         </div>
 
     </div>
